--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,10 +13,10 @@ mybatis.mapper-locations=classpath:mapper/*.xml
 #spring.resources.static-locations=classpath:/static/
 #spring.mvc.static-path-pattern=/static/**
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/data?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf-8&useSSL=true
+spring.datasource.url=jdbc:mysql://39,106.216.153:3306/pismdb?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf-8&useSSL=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=123456
 spring.mvc.view.prefix=classpath:/static/
 spring.mvc.view.suffix=.html
 
