2019/10/15新增连接远程Dragon服务器的功能，连接服务器的功能随着项目同步启动，可以减少用户搜索时间，功能部分还需要完善

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,13 @@
     </properties>
 
     <dependencies>
+
+        <dependency>
+            <groupId>com.jcraft</groupId>
+            <artifactId>jsch</artifactId>
+            <version>0.1.54</version>
+        </dependency>
+
         <!-- 热部署模块 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
