--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,4 +25,11 @@ Thymeleaf.prefix=classpath:/templates/
 Thymeleaf.suffix=.html 
 # 在这里表示以.html作为后缀。
 
+Dragon.url=
+Dragon.username=
+Dragon.psw=
+Dragon.port=
+
+
+
 
