--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-server.port=8080
 mybatis.type-aliases-package=com.nwafu.PISMDB.entity
 mybatis.mapper-locations=classpath:mapper/*.xml
 #spring.jackson.mapper.sort-properties-alphabetically=false
@@ -11,14 +10,16 @@ mybatis.mapper-locations=classpath:mapper/*.xml
 #spring.jackson.time-zone=GMT+8
 #spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 #spring.resources.static-locations=classpath:/static/
-#spring.mvc.static-path-pattern=/static/**
+#spring.mvc.static-path-pattern=/**
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/data?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf-8&useSSL=true
+spring.datasource.url=jdbc:mysql://localhost:3306/data_new?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf-8&useSSL=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=123456
-spring.mvc.view.prefix=classpath:/static/
-spring.mvc.view.suffix=.html
+spring.datasource.password=
+#=123456
+spring.mvc.static-path-pattern=/static/**
+#spring.mvc.view.prefix=classpath:/static/
+#spring.mvc.view.suffix=.html
 
 Thymeleaf.prefix=classpath:/templates/ 
 #  在这里作为前缀，表示被thymeleaf修饰的页面在这里作为根目录。（注意：不是静态资源）
