--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 mybatis.type-aliases-package=com.nwafu.PISMDB.entity
 mybatis.mapper-locations=classpath:mapper/*.xml
+
+server.port=8080
+
 #spring.jackson.mapper.sort-properties-alphabetically=false
 #上传文件最大设置
 #spring.servlet.multipart.max-file-size=10240mb
@@ -12,10 +15,10 @@ mybatis.mapper-locations=classpath:mapper/*.xml
 #spring.resources.static-locations=classpath:/static/
 #spring.mvc.static-path-pattern=/**
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/data_new?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf-8&useSSL=true
+spring.datasource.url=jdbc:mysql://localhost:3306/data?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf-8&useSSL=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=123456
 #=123456
 spring.mvc.static-path-pattern=/static/**
 #spring.mvc.view.prefix=classpath:/static/
