--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,12 +4,12 @@ mybatis.mapper-locations=classpath:mapper/*.xml
 server.port=8080
 
 #spring.jackson.mapper.sort-properties-alphabetically=false
-#ÉÏ´«ÎÄ¼ş×î´óÉèÖÃ
+#ï¿½Ï´ï¿½ï¿½Ä¼ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
 #spring.servlet.multipart.max-file-size=10240mb
 #spring.servlet.multipart.max-request-size=10240mb
-#¿ª·¢Ê±ÈÈ²¿Êğ£¬·¢²¼Ê±ÉèÖÃtrue, intelliJ ctrl+shift+f9 ¸üĞÂ¾²Ì¬×ÊÔ´
+#ï¿½ï¿½ï¿½ï¿½Ê±ï¿½È²ï¿½ï¿½ğ£¬·ï¿½ï¿½ï¿½Ê±ï¿½ï¿½ï¿½ï¿½true, intelliJ ctrl+shift+f9 ï¿½ï¿½ï¿½Â¾ï¿½Ì¬ï¿½ï¿½Ô´
 #spring.thymeleaf.cache=false
-#json½âÎöÅäÖÃ
+#jsonï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
 #spring.jackson.time-zone=GMT+8
 #spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 #spring.resources.static-locations=classpath:/static/
@@ -25,15 +25,18 @@ spring.mvc.static-path-pattern=/static/**
 #spring.mvc.view.suffix=.html
 
 Thymeleaf.prefix=classpath:/templates/ 
-#  ÔÚÕâÀï×÷ÎªÇ°×º£¬±íÊ¾±»thymeleafĞŞÊÎµÄÒ³ÃæÔÚÕâÀï×÷Îª¸ùÄ¿Â¼¡££¨×¢Òâ£º²»ÊÇ¾²Ì¬×ÊÔ´£©
+#  ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ÎªÇ°×ºï¿½ï¿½ï¿½ï¿½Ê¾ï¿½ï¿½thymeleafï¿½ï¿½ï¿½Îµï¿½Ò³ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Îªï¿½ï¿½Ä¿Â¼ï¿½ï¿½ï¿½ï¿½×¢ï¿½â£ºï¿½ï¿½ï¿½Ç¾ï¿½Ì¬ï¿½ï¿½Ô´ï¿½ï¿½
 Thymeleaf.suffix=.html 
-# ÔÚÕâÀï±íÊ¾ÒÔ.html×÷Îªºó×º¡£
+# ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ê¾ï¿½ï¿½.htmlï¿½ï¿½Îªï¿½ï¿½×ºï¿½ï¿½
 
 Dragon.url=
 Dragon.username=
 Dragon.psw=
 Dragon.port=
 
+logging.path=classpath:/loggingconfig/*.xml
+logging.level.
 
-
-
+blast.binPath=classpath:/blastpackage/blast-2.4.0+/bin
+blast.changedfasta=classpath:/seqsearch/exchangedfasta
+blast.result=classpath:/seqsearch/result
