--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ server.address=0.0.0.0
 #spring.resources.static-locations=classpath:/static/
 #spring.mvc.static-path-pattern=/**
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/data_newone?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf-8&useSSL=true
+spring.datasource.url=jdbc:mysql://localhost:3306/data1109?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf-8&useSSL=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=
